@@ -1,3 +1,13 @@
+2003-01-08  Anders Carlsson  <andersca@codefactory.se>
+
+	* gnome-theme-manager.c: (update_font_button_state),
+	(font_key_changed), (apply_font_clicked), (setup_dialog):
+	* gnome-theme-manager.h:
+	Add support for applying fonts.
+	
+	* theme-thumbnail.c: (create_image):
+	Allow SVG files as icons.
+	
 2003-01-08  Jody Goldberg <jody@gnome.org>
 
 	* gnome-theme-details.c (gnome_theme_details_update_from_gconf) :
